docs(skills): write acceptance tests against the built image
The `tests` skill told an acceptance test to boot `module()` under
`testApplication`. That holds only while the module can start on the
classpath alone; the moment it verifies a database on boot or launches
background workers, the module fails before the first request and the test
proves nothing. A service that migrates its schema on boot cannot be
acceptance-tested that way at all, because the migration is part of what is
under test.

The acceptance section now drives the artifact that ships: a Testcontainers
stack with the service image built by the build from the working tree, started
once per run, and gated so a machine without a daemon skips the module instead
of going red. Offering the module now says what it costs — an image task and a
daemon on the critical path — so the reader can decline with the facts.

Assertions get a section of their own. Picked field reads miss a renamed
field, a naming strategy applied application-wide, and a value that arrived
empty; a JSON Schema with `additionalProperties: false` states the whole
contract, a golden file covers documents read field by field, and the status
code is asserted explicitly because clients branch on it. Request bodies are
built, not hand-quoted and not serialized from the service's own DTO, which
cannot disagree with itself. External services are faked with a WireMock
container on the same network, with stubs kept in WireMock's own files.

Three failures found the hard way get written down so they are not found
twice:

  - Kover instruments `src/main` before MockK reaches it, so a stubbed final
    class silently calls its real method and fails inside the class under
    test. The `kover` skill now carries the two JVM flags Byte Buddy needs.
  - docker-java negotiates an API version a current daemon refuses, and
    Testcontainers reports it as "no Docker environment". The fix is a JVM
    system property on the `Test` task, not `testcontainers.